<resources>
    <string name="app_name">ExpenseCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="total">Total</string>
    <string name="bills">Bills</string>
    <string name="total_money_spend">Total money spend</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="submit">Submit</string>
    <string name="remove_last">Remove(last)</string>
    <string name="view_details">View details</string>
    <string name="date">Date</string>
    <string name="amount_paid">Amount paid</string>
    <string name="no">No.</string>
    <string name="previous_balance">Previous balance</string>
    <string name="credit_amount">Credit amount</string>
</resources>