<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auto.AutoFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/Id_auto_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardElevation="@dimen/card_dimen"
        app:cardCornerRadius="@dimen/card_dimen"
        android:layout_margin="@dimen/layout_dimen"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_dimen">

            <TextView
                android:id="@+id/Id_auto_money_spend_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_money_spend"
                android:textSize="@dimen/small_txt_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/Id_auto_money_spend_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/large_txt_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/Id_auto_money_spend_label"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Id_auto_enter_money_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_amount"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_margin="@dimen/layout_dimen"
        app:layout_constraintTop_toBottomOf="@id/Id_auto_card"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Id_auto_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Id_auto_enter_money_edt"
        android:layout_marginTop="@dimen/layout_dimen"
        android:layout_marginStart="@dimen/layout_dimen"
        android:layout_marginEnd="@dimen/layout_dimen"
        android:background="@drawable/btn_shape"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_top_space"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Id_auto_view_details_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Id_auto_submit_btn"
        android:layout_marginTop="@dimen/margin_top_space"
        android:layout_marginStart="@dimen/layout_dimen"
        android:layout_marginEnd="@dimen/layout_dimen"
        android:background="@drawable/btn_shape"
        android:text="@string/view_details"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_top_space"/>



</androidx.constraintlayout.widget.ConstraintLayout>