<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/off_white"
    tools:context=".ui.fragments.shop.ShopFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/Id_shop_title_amount_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="@dimen/card_dimen"
        app:cardElevation="@dimen/card_dimen"
        android:layout_margin="@dimen/layout_dimen">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/Id_shop_title_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="@dimen/margin_top_space"
                android:gravity="center"
                android:textSize="@dimen/small_txt_size"
                android:text="@string/previous_balance"
                />
            <EditText
                android:id="@+id/Id_shop_prev_amount_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/Id_shop_title_amount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBottomOf="parent"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:textSize="@dimen/large_txt_size"
                android:gravity="center"
                android:layout_margin="@dimen/margin_top_space"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Id_shop_title_amount_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/layout_dimen"

        android:orientation="vertical">
        <EditText
            android:id="@+id/Id_shop_credit_amount_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:hint="@string/credit_amount"
            android:textSize="@dimen/large_txt_size"/>
        <EditText
            android:id="@+id/Id_shop_paid_amount_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            android:hint="@string/amount_paid"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/margin_top_space"
            android:textSize="@dimen/large_txt_size"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Id_shop_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_dimen"
            android:layout_marginStart="@dimen/layout_dimen"
            android:layout_marginEnd="@dimen/layout_dimen"
            android:background="@drawable/btn_shape"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_top_space"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Id_shop_view_details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_dimen"
            android:layout_marginStart="@dimen/layout_dimen"
            android:layout_marginEnd="@dimen/layout_dimen"
            android:background="@drawable/btn_shape"
            android:text="@string/view_details"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_top_space"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>