<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <View
            android:id="@+id/Id_auto_details_recy_top_line"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"/>
        <LinearLayout
            android:id="@+id/Id_auto_details_recy_title_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/Id_auto_details_recy_top_line"
            app:layout_constraintBottom_toTopOf="@id/Id_auto_details_recy_bottom_line"
            android:weightSum="5">
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/Id_auto_details_recy_sl_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="@dimen/small_txt_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_dimen"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/Id_auto_details_recy_amount_paid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount_paid"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/card_dimen"
                android:textSize="@dimen/small_txt_size"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/Id_auto_details_recy_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/date"
                android:textSize="@dimen/small_txt_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_dimen"
                android:gravity="center"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>
        <View
            android:id="@+id/Id_auto_details_recy_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/Id_auto_details_recy_title_lay"
            android:background="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>